sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value j
        echange(i:Int,j:Int)
                      ^